99-deployments/manifests/loki-log/templates/grafana-loki-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-loki-ing
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /tools/grafana-loki
            pathType: Prefix
            backend:
              service:
                name: loki-log-grafana
                port:
                  number: 80
